--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Add Power Platform CLI to PATH
       run: |
-        echo "##[add-path]C:\\Program Files\\Power Platform\\Tools"
+        echo "C:\\Program Files\\Power Platform\\Tools" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8
       shell: powershell
 
     # - name: Add Power Platform CLI to PATH
