--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -57,13 +57,15 @@ jobs:
       # with:
       #   lfs: true
 
+    - name: Setup Power Platform CLI
+      uses: ./.github/actions/setup-pac
+      
+    # - name: Install Power Platform CLI
+    #   uses: microsoft/powerplatform-actions/setup@v1
 
-    - name: Install Power Platform CLI
-      uses: microsoft/powerplatform-actions/setup@v1
-
-    - name: Verify Power Platform CLI installation
-      run: pac --version
-      shell: pwsh
+    # - name: Verify Power Platform CLI installation
+    #   run: pac --version
+    #   shell: pwsh
 
     # - name: Add Power Platform CLI to PATH
     #   shell: powershell
