--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -56,16 +56,16 @@ jobs:
       with:
         ref: main
 
-    - name: Setup Power Platform CLI
+
+    - name: Install Power Platform CLI
       run: |
         Invoke-WebRequest -Uri https://aka.ms/powerplatform-vscode -OutFile powerplatform-vscode.msi
         Start-Process msiexec.exe -Wait -ArgumentList '/I powerplatform-vscode.msi /quiet /norestart'
-        echo "C:\\Program Files\\Power Platform\\Tools" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8
-      shell: powershell
+        $env:Path += ";C:\Program Files\WindowsPowerShell\Modules"
 
-    - name: Verify Power Platform CLI installation
-      run: pac --version
-      shell: powershell
+    - name: Install PAC CLI
+      uses: microsoft/powerplatform-actions/actions-install@v1  # Install PAC CLI
+      id: install-pac
 
     - name: Checkout gitsol branch for workflow files
       uses: actions/checkout@v3
