--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -138,7 +138,7 @@ jobs:
         # client-secret: ${{ secrets.envSecret }}
         # tenant-id: ${{ inputs.TENANT_ID }}
         app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
-        client-secret: '7af6a744-25d6-4845-9153-efd4378b7b02'
+        client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
         tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
         solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
         force-overwrite: true
