--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -85,10 +85,14 @@ jobs:
     - name: Export solution as managed
       uses: microsoft/powerplatform-actions/export-solution@main
       with:
-        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
-        app-id: ${{ inputs.CLIENT_ID }}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{ inputs.TENANT_ID }}
+        # environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
+        # app-id: ${{ inputs.CLIENT_ID }}
+        # client-secret: ${{ secrets.envSecret }}
+        # tenant-id: ${{ inputs.TENANT_ID }}
+        environment-url: 'https://org5569b62d.crm15.dynamics.com'
+        app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
+        client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
+        tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
         solution-name: ${{ inputs.solution_name }}
         managed: true
         solution-output-file: ${{ inputs.solution_shipping_folder }}/${{ inputs.solution_name }}_managed.zip
