--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -70,14 +70,17 @@ jobs:
     - name: Import solution as unmanaged to build env
       uses: microsoft/powerplatform-actions/import-solution@main
       with:
-        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
-        app-id: ${{ inputs.CLIENT_ID }}
-        # client-secret: ${{ secrets.envSecret }}
-        # tenant-id: ${{ inputs.TENANT_ID }}
-        # environment-url: 'https://org5569b62d.crm15.dynamics.com'
+
+        environment-url: 'https://org5569b62d.crm15.dynamics.com'
         # app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
-        client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
-        tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
+        # client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
+        # tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
+        
+        # environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
+        app-id: ${{ inputs.CLIENT_ID }}
+        client-secret: ${{ secrets.envSecret }}
+        tenant-id: ${{ inputs.TENANT_ID }}
+  
         solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
         force-overwrite: true
         publish-changes: true
