--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -55,10 +55,19 @@ jobs:
       uses: actions/checkout@v3
       with:
         lfs: true
-
+    - name: Debug secrets and inputs
+      run: |
+        echo "CLIENT_ID: ${{ secrets.APP_ID }}"
+        echo "TENANT_ID: ${{ secrets.TEN_ID }}"
+        echo "ENVSECRET: ${{ secrets.ENVSECRET }}"
+        echo "BUILD_ENVIRONMENT_URL: ${{ inputs.BUILD_ENVIRONMENT_URL }}"
    
     - name: Install Power Platform CLI (PAC)
       uses: microsoft/powerplatform-actions/actions-install@v1
+  
+    - name: Authenticate with Power Platform
+      run: |
+        pac auth create --url ${{ inputs.BUILD_ENVIRONMENT_URL }} --applicationId ${{ secrets.APP_ID }} --clientSecret ${{ secrets.ENVSECRET }} --tenant ${{ secrets.TEN_ID }}
       
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@main
