--- a/.github/workflows/call_workflow.yml
+++ b/.github/workflows/call_workflow.yml
@@ -17,7 +17,7 @@ jobs:
       #Update your values here
       BUILD_ENVIRONMENT_URL: secrets.BUILD_ENV
       PRODUCTION_ENVIRONMENT_URL: secrets.PROD_ENV
-      CLIENT_ID: secrets.APP_ID
-      TENANT_ID: secrets.Ten_ID      
+      CLIENT_ID: secrets.CLIENT_ID
+      TENANT_ID: secrets.TENANT_ID      
     secrets:
       envSecret: ${{ secrets.ENVSECRET }}
