--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -55,19 +55,13 @@ jobs:
       uses: actions/checkout@v3
       with:
         lfs: true
-    - name: Debug secrets and inputs
-      run: |
-        echo "CLIENT_ID: ${{ secrets.APP_ID }}"
-        echo "TENANT_ID: ${{ secrets.TEN_ID }}"
-        echo "ENVSECRET: ${{ secrets.ENVSECRET }}"
-        echo "BUILD_ENVIRONMENT_URL: ${{ inputs.BUILD_ENVIRONMENT_URL }}"
-   
+     
     - name: Install Power Platform CLI (PAC)
       uses: microsoft/powerplatform-actions/actions-install@v1
   
-    - name: Authenticate with Power Platform
-      run: |
-        pac auth create --url ${{ inputs.BUILD_ENVIRONMENT_URL }} --applicationId ${{ secrets.APP_ID }} --clientSecret ${{ secrets.ENVSECRET }} --tenant ${{ secrets.TEN_ID }}
+    # - name: Authenticate with Power Platform
+    #   run: |
+    #     pac auth create --url ${{ inputs.BUILD_ENVIRONMENT_URL }} --applicationId ${{ secrets.Client_ID }} --clientSecret ${{ secrets.ENVSECRET }} --tenant ${{ secrets.TENANT_ID }}
       
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@main
@@ -87,7 +81,7 @@ jobs:
         
         environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
         app-id: ${{ inputs.CLIENT_ID }}
-        client-secret: ${{ secrets.ENVSECRET }}
+        client-secret: ${{ secrets.envSecret }}
         tenant-id: ${{ inputs.TENANT_ID }}
       
         solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
@@ -101,10 +95,7 @@ jobs:
         app-id: ${{ inputs.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
         tenant-id: ${{ inputs.TENANT_ID }}
-        # environment-url: 'https://org5569b62d.crm15.dynamics.com'
-        # app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
-        # client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
-        # tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
+  
         solution-name: ${{ inputs.solution_name }}
         managed: true
         solution-output-file: ${{ inputs.solution_shipping_folder }}/${{ inputs.solution_name }}_managed.zip
