--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -79,10 +79,10 @@ jobs:
         # client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
         # tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
         
-        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
-        app-id: ${{ inputs.CLIENT_ID }}
+        environment-url: ${{ secrets.BUILD_ENVIRONMENT_URL }}
+        app-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{ inputs.TENANT_ID }}
+        tenant-id: ${{ secrets.TENANT_ID }}
       
         solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
         force-overwrite: true
@@ -91,10 +91,10 @@ jobs:
     - name: Export solution as managed
       uses: microsoft/powerplatform-actions/export-solution@main
       with:
-        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
-        app-id: ${{ inputs.CLIENT_ID }}
+        environment-url: ${{ secrets.BUILD_ENVIRONMENT_URL }}
+        app-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{ inputs.TENANT_ID }}
+        tenant-id: ${{ secrets.TENANT_ID }}
   
         solution-name: ${{ inputs.solution_name }}
         managed: true
@@ -115,8 +115,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        lfs: true
-
+        # lfs: true
+        token: ${{ secrets.GH_PAT }}
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v4
       with:
@@ -124,12 +124,12 @@ jobs:
         path: ${{ inputs.solution_release_folder }}
 
     - name: Import solution to prod env
-      uses: microsoft/powerplatform-actions/import-solution@v0
+      uses: microsoft/powerplatform-actions/import-solution@v1
       with:
-        environment-url: ${{ inputs.PRODUCTION_ENVIRONMENT_URL }}
-        app-id: ${{ inputs.CLIENT_ID }}
+        environment-url: ${{ secrets.PRODUCTION_ENVIRONMENT_URL }}
+        app-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{ inputs.TENANT_ID }}
+        tenant-id: ${{ secrets.TENANT_ID }}
         solution-file: ${{ inputs.solution_release_folder }}/${{ inputs.solution_name }}_managed.zip
         force-overwrite: true
         publish-changes: true
