--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -39,24 +39,13 @@ on:
       #   description: 'The tenant id'
       #   type: string
       #   required: true
-      env:
-      BUILD_ENVIRONMENT_URL:
-        description: 'Build environment url.'
-        type: string
-        required: true
-      PRODUCTION_ENVIRONMENT_URL:
-        description: 'Prod Env URL'
-        type: string
-        required: true
-      CLIENT_ID:
-        description: 'The client id'
-        type: string
-        required: true
-      TENANT_ID:
-        description: 'The tenant id'
-        type: string
-        required: true
-        secrets:
+
+    secrets:
+      BUILD_ENVIRONMENT_URL: ${{ secrets.BUILD_ENV }}
+      PRODUCTION_ENVIRONMENT_URL: ${{ secrets.PROD_ENV }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      TENANT_ID: ${{ secrets.TENANT_ID }}
+      
       envSecret:
         description: 'The secret value for authentication using SPN'
         required: true
