--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -41,7 +41,10 @@ on:
       #   required: true
 
     secrets:
-      BUILD_ENVIRONMENT_URL: ${{ secrets.BUILD_ENV }}
+      BUILD_ENVIRONMENT_URL: 
+        description: 'Build environment url.'
+        type: string
+        required: true
       PRODUCTION_ENVIRONMENT_URL: ${{ secrets.PROD_ENV }}
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
       TENANT_ID: ${{ secrets.TENANT_ID }}
