--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -118,7 +118,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         # lfs: true
-        token: ${{ secrets.GH_PAT }}
+        token: ${{ secrets.GH_TOKEN }}
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v4
       with:
