--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -45,6 +45,9 @@ on:
       envSecret:
         description: 'The secret value for authentication using SPN'
         required: true
+      GH_TOKEN:
+        description: 'GitHub Personal Access Token'
+        required: true
 
 jobs:
   convert-to-managed:
