--- a/.github/workflows/call_workflow.yml
+++ b/.github/workflows/call_workflow.yml
@@ -27,3 +27,4 @@ jobs:
       # TENANT_ID: ${{ secrets.TENANT_ID }}
       
       envSecret: ${{ secrets.ENVSECRET }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
