--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -129,7 +129,7 @@ jobs:
         path: ${{ inputs.solution_release_folder }}
 
     - name: Import solution to prod env
-      uses: microsoft/powerplatform-actions/import-solution@v1
+      uses: microsoft/powerplatform-actions/import-solution@main
       with:
         environment-url: ${{ inputs.PRODUCTION_ENVIRONMENT_URL }}
         app-id: ${{ inputs.CLIENT_ID }}
