--- a/.github/workflows/Approval_export_branch.yml
+++ b/.github/workflows/Approval_export_branch.yml
@@ -1,4 +1,4 @@
-name: Approval_export-and-branch-solution
+name: Approval-export-and-branch-solution
 
 on:
   workflow_dispatch:
@@ -35,82 +35,76 @@ jobs:
     env:
       RUNNER_DEBUG: 1
     steps:
-      - uses: actions/checkout@v3  # Use the latest version of checkout action
-        with:
-          lfs: true
+    - uses: actions/checkout@v3
+      with:
+        lfs: true
 
-      - name: Install Power Platform CLI
-        run: |
-          Invoke-WebRequest -Uri https://aka.ms/powerplatform-vscode -OutFile powerplatform-vscode.msi
-          Start-Process msiexec.exe -Wait -ArgumentList '/I powerplatform-vscode.msi /quiet /norestart'
-          $env:Path += ";C:\Program Files\WindowsPowerShell\Modules"
+    - name: Install Power Platform CLI
+      run: |
+        Invoke-WebRequest -Uri https://aka.ms/powerplatform-vscode -OutFile powerplatform-vscode.msi
+        Start-Process msiexec.exe -Wait -ArgumentList '/I powerplatform-vscode.msi /quiet /norestart'
+        $env:Path += ";C:\Program Files\WindowsPowerShell\Modules"
 
-      - name: Install PAC CLI
-        uses: microsoft/powerplatform-actions/actions-install@v1  # Install PAC CLI
-        id: install-pac
+    - name: Install PAC CLI
+      uses: microsoft/powerplatform-actions/actions-install@v1
+      id: install-pac
 
-      - name: Authenticate with Power Platform
-        uses: microsoft/powerplatform-actions/who-am-i@v1  # Use latest available version
-        with:
-          environment-url: ${{ secrets.DEV_ENV }}
-          app-id: ${{ secrets.CLIENT_ID }}
-          client-secret: ${{ secrets.Client_SPN }}
-          tenant-id: ${{secrets.TENANT_ID}}
+    - name: who-am-i action
+      uses: microsoft/powerplatform-actions/who-am-i@v1
+      with:
+        environment-url: ${{ secrets.DEV_ENV }}
+        app-id: ${{ secrets.CLIENT_ID }}
+        client-secret: ${{ secrets.Client_SPN }}
+        tenant-id: ${{secrets.TENANT_ID}}
 
-      - name: Export Solution from Power Platform
-        uses: microsoft/powerplatform-actions/export-solution@v1  # Use latest available version
-        with:
-          environment-url: ${{ secrets.DEV_ENV }}
-          app-id: ${{ secrets.CLIENT_ID }}
-          client-secret: ${{ secrets.Client_SPN }}
-          tenant-id: ${{secrets.TENANT_ID}}
-          solution-name: app_sol
-          solution-output-file: out/exported/app_sol.zip
+    - name: export-solution action
+      uses: microsoft/powerplatform-actions/export-solution@v1
+      with:
+        environment-url: ${{ secrets.DEV_ENV }}
+        app-id: ${{ secrets.CLIENT_ID }}
+        client-secret: ${{ secrets.Client_SPN }}
+        tenant-id: ${{secrets.TENANT_ID}}
+        solution-name: app_sol
+        solution-output-file: out/exported/app_sol.zip
 
-      - name: Unpack Solution
-        uses: microsoft/powerplatform-actions/unpack-solution@v1  # Use latest available version
-        with:
-          solution-file: out/exported/app_sol.zip
-          solution-folder: out/solutions/app_sol
-          solution-type: 'Unmanaged'
-          overwrite-files: true
+    - name: unpack-solution action
+      uses: microsoft/powerplatform-actions/unpack-solution@v1
+      with:
+        solution-file: out/exported/app_sol.zip
+        solution-folder: out/solutions/app_sol
+        solution-type: 'Unmanaged'
+        overwrite-files: true
 
-      - name: Branch Solution
-        uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
-        with:
-          solution-folder: out/solutions/app_sol
-          solution-target-folder: solutions/app_sol
-          repo-token: ${{ secrets.GH_TOKEN }}
-          allow-empty-commit: true
+    - name: branch-solution, prepare it for a PullRequest
+      uses: microsoft/powerplatform-actions/branch-solution@v1
+      with:
+        solution-folder: out/solutions/app_sol
+        solution-target-folder: solutions/app_sol
+        repo-token: ${{ secrets.GH_TOKEN }}
+        allow-empty-commit: true
 
-  wait-for-approval:
-    needs: [export-from-dev]
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v5
+      with:
+        token: ${{ secrets.GH_TOKEN }}
+        commit-message: "feat: Update solution ${{ inputs.solution_name }}"
+        title: "Update solution ${{ inputs.solution_name }}"
+        body: "This PR updates the solution ${{ inputs.solution_name }} with the latest changes from the Power Platform environment."
+        branch: "update-solution-${{ inputs.solution_name }}"
+        base: main
+        draft: false
+        delete-branch: true
+
+  approve-and-merge:
     runs-on: ubuntu-latest
-    environment: production  # Enables manual approval in GitHub UI
+    needs: export-from-dev
     steps:
-      - name: Request Manual Approval
-        run: echo "Waiting for approval from muhammadbilal.saeed@systemsltd.com before merging..."
+    - name: Wait for manual approval
+      run: |
+        echo "Please manually approve the PR and resume the workflow."
+        echo "Once approved, click 'Resume workflow' in the GitHub Actions UI."
+      continue-on-error: true
 
-  merge-to-main:
-    needs: [wait-for-approval]
-    runs-on: ubuntu-latest
-    if: github.actor == 'muhammadbilal.saeed@systemsltd.com'  # Restricts merging to specific user
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Merge to Main
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GH_TOKEN }}
-          script: |
-            const prNumber = context.payload.pull_request.number;
-            github.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: prNumber,
-              merge_method: "squash"
-            });
-
-      - name: Notify Merge Completion
-        run: echo "Pull request #${{ github.event.pull_request.number }} has been merged successfully."
+    - name: Merge PR
+      run: |
+        echo "PR approved and merged!"
