--- a/.github/workflows/Approval_export_branch.yml
+++ b/.github/workflows/Approval_export_branch.yml
@@ -1,4 +1,4 @@
-name: Approval-export-and-branch-solution
+name: approval-export-and-branch-solution
 
 on:
   workflow_dispatch:
@@ -99,12 +99,39 @@ jobs:
     runs-on: ubuntu-latest
     needs: export-from-dev
     steps:
-    - name: Wait for manual approval
+    - name: Check GitHub username
+      id: check-user
       run: |
-        echo "Please manually approve the PR and resume the workflow."
-        echo "Once approved, click 'Resume workflow' in the GitHub Actions UI."
-      continue-on-error: true
+        ALLOWED_USER="mainbilalg1@gmail.com"  # Replace with the GitHub username of abcd@hotmail.com
+        if [ "${{ github.actor }}" != "$ALLOWED_USER" ]; then
+          echo "::error::Only $ALLOWED_USER can approve this workflow."
+          exit 1
+        else
+          echo "Approved by $ALLOWED_USER."
+        fi
 
-    - name: Merge PR
+    - name: Get Pull Request Number
+      id: get-pr-number
       run: |
-        echo "PR approved and merged!"
+        PR_NUMBER=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls?head=update-solution-${{ inputs.solution_name }}" \
+          | jq -r '.[0].number')
+        echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_OUTPUT
+
+    - name: Approve Pull Request
+      if: steps.check-user.outcome == 'success'
+      run: |
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.get-pr-number.outputs.PR_NUMBER }}/reviews" \
+          -d '{"event": "APPROVE"}'
+
+    - name: Merge Pull Request
+      if: steps.check-user.outcome == 'success'
+      run: |
+        curl -X PUT \
+          -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.get-pr-number.outputs.PR_NUMBER }}/merge" \
+          -d '{"merge_method": "merge"}'
