--- a/.github/workflows/Approval_export_branch.yml
+++ b/.github/workflows/Approval_export_branch.yml
@@ -1,24 +1,9 @@
-name: approval-export-and-branch-solution
+name: export-and-branch-solution
 
 on:
-  workflow_dispatch:
-    inputs:
-      solution_name:
-        description: 'Name of the solution to work on from Power Platform'
-        required: true
-        default: app_sol
-      solution_exported_folder:
-        description: 'Folder name for staging the exported solution *do not change*'
-        required: true
-        default: out/exported/
-      solution_folder:
-        description: 'Staging the unpacked solution folder before check-in *do not change*'
-        required: true
-        default: out/solutions/
-      solution_target_folder:
-        description: 'Folder name to be created and checked in *do not change*'
-        required: true
-        default: solutions/
+  pull_request:
+    branches:
+      - main
 
 env:
   ENVIRONMENT_URL: secrets.DEV_ENV
@@ -27,7 +12,7 @@ env:
 
 permissions:
   contents: write
-  pull-requests: write
+  pull-requests: write  # Allow PR updates
 
 jobs:
   export-from-dev:
@@ -49,89 +34,61 @@ jobs:
       uses: microsoft/powerplatform-actions/actions-install@v1
       id: install-pac
 
-    - name: who-am-i action
+    - name: Who-Am-I
       uses: microsoft/powerplatform-actions/who-am-i@v1
       with:
         environment-url: ${{ secrets.DEV_ENV }}
         app-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.Client_SPN }}
-        tenant-id: ${{secrets.TENANT_ID}}
+        tenant-id: ${{ secrets.TENANT_ID }}
 
-    - name: export-solution action
+    - name: Export Solution
       uses: microsoft/powerplatform-actions/export-solution@v1
       with:
         environment-url: ${{ secrets.DEV_ENV }}
         app-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.Client_SPN }}
-        tenant-id: ${{secrets.TENANT_ID}}
-        solution-name: app_sol
-        solution-output-file: out/exported/app_sol.zip
+        tenant-id: ${{ secrets.TENANT_ID }}
+        solution-name: gitsol
+        solution-output-file: out/exported/gitsol.zip
 
-    - name: unpack-solution action
+    - name: Unpack Solution
       uses: microsoft/powerplatform-actions/unpack-solution@v1
       with:
-        solution-file: out/exported/app_sol.zip
-        solution-folder: out/solutions/app_sol
+        solution-file: out/exported/gitsol.zip
+        solution-folder: out/solutions/gitsol
         solution-type: 'Unmanaged'
         overwrite-files: true
 
-    - name: branch-solution, prepare it for a PullRequest
+    - name: Branch Solution
       uses: microsoft/powerplatform-actions/branch-solution@v1
       with:
-        solution-folder: out/solutions/app_sol
-        solution-target-folder: solutions/app_sol
+        solution-folder: out/solutions/gitsol
+        solution-target-folder: solutions/gitsol
         repo-token: ${{ secrets.GH_TOKEN }}
         allow-empty-commit: true
 
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v5
-      with:
-        token: ${{ secrets.GH_TOKEN }}
-        commit-message: "feat: Update solution ${{ inputs.solution_name }}"
-        title: "Update solution ${{ inputs.solution_name }}"
-        body: "This PR updates the solution ${{ inputs.solution_name }} with the latest changes from the Power Platform environment."
-        branch: "update-solution-${{ inputs.solution_name }}"
-        base: main
-        draft: false
-        delete-branch: true
-
-  approve-and-merge:
+  wait-for-approval:
+    needs: [export-from-dev]
     runs-on: ubuntu-latest
-    needs: export-from-dev
+    environment: production  # Triggers approval in GitHub UI
     steps:
-    - name: Check GitHub username
-      id: check-user
-      run: |
-        ALLOWED_USER="mainbilalg1@gmail.com"  # Replace with the GitHub username of abcd@hotmail.com
-        if [ "${{ github.actor }}" != "$ALLOWED_USER" ]; then
-          echo "::error::Only $ALLOWED_USER can approve this workflow."
-          exit 1
-        else
-          echo "Approved by $ALLOWED_USER."
-        fi
-
-    - name: Get Pull Request Number
-      id: get-pr-number
-      run: |
-        PR_NUMBER=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls?head=update-solution-${{ inputs.solution_name }}" \
-          | jq -r '.[0].number')
-        echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_OUTPUT
-
-    - name: Approve Pull Request
-      if: steps.check-user.outcome == 'success'
-      run: |
-        curl -X POST \
-          -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.get-pr-number.outputs.PR_NUMBER }}/reviews" \
-          -d '{"event": "APPROVE"}'
-
-    - name: Merge Pull Request
-      if: steps.check-user.outcome == 'success'
-      run: |
-        curl -X PUT \
-          -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.get-pr-number.outputs.PR_NUMBER }}/merge" \
-          -d '{"merge_method": "merge"}'
+      - name: Request Manual Approval
+        run: echo "Waiting for approval from abcd@hotmail.com before merging..."
+  
+  merge-to-main:
+    needs: [wait-for-approval]
+    runs-on: ubuntu-latest
+    if: github.actor == 'mainbilalg1@gmail.com'  # Ensure only this user can merge
+    steps:
+      - name: Merge Pull Request
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            github.pulls.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+              merge_method: "squash"
+            })
